# custom-llm-toolkit

./: .gitignore  README.md  pyproject.toml  train.py
configs/: config.py
notebooks/tutorials/: ch02.ipynb
src/: __init__.py  device.py  prepare_dataset.py
src/data/: __init__.py  collator.py  dataset.py  preprocessing.py  splits.py
src/models/: __init__.py
src/models/attention/: __init__.py  multi_head_attention.py  positional_encoding.py  scaled_dot_product.py
src/models/gpt/: __init__.py  config.py  download_model_weights.py  generation.py  gpt_model.py  load_weights_into_model.py
src/models/transformer/: __init__.py  feed_forward.py  layer_norm.py  transformer_block.py
src/tokenizer/: tokenizer.py
src/training/: __init__.py  config.py  scheduler.py  trainer.py
src/training/finetune/: __init__.py  classification.py  finetune_trainer.py  instruction_following.py
src/training/pretrain/: __init__.py  objectives.py  pretrain_trainer.py
src/utils/: checkpoint.py  data_downloader.py  logging.py  profiling.py  visualization.py
src/visualizations/: visualize.py
