[project]
name = "custom-llm-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Faysal, Sheikh",email = "u1175660@internal.imsglobal.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "plotly (>=6.1.2,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
